# codelet-agent

./: .env.example  .gitignore  README.md  bloomberg_news.pptx  compute_e_mc.py  create_news_pptx.py  download_ref_files.py  e_variance_reduction.py  fetch_bloomberg_news.py  mini_coding_agent.py  pi_variance_reduction.py  plan.md  pyproject.toml  random_chars.txt  requirements.txt  run_gdpval_batch.py  sina_news_20260518.pptx  网易新闻速览_20260518.pptx
.codelet/sessions/: 20260601-110110-f1d57e.json  20260601-111057-df69f5.json  20260601-232816-613db6.json  20260601-233121-bba2d0.json  20260601-233457-b26dde.json  20260601-233728-145d25.json
.github/workflows/: ci.yml
codelet/: __init__.py  __main__.py  abort_controller.py  agent.py  baseline.py  cli.py  clients.py  commands.py  compaction.py  config.py  cost_tracker.py  env_config.py  file_history.py  hardening.py  history.py  libreoffice.py  mcp.py  memdir.py  memory_files.py  parsing.py  permissions.py  prompt.py  providers.py  query.py  sandbox.py  sessions.py  skills.py  stop_reason.py  subagent.py  tasks.py  tools.py  utils.py  welcome.py  workspace.py
codelet/config/: default.yaml
codelet/protocols/: __init__.py  a2a.py  acp.py  mcp.py
codexlet/: README.md  package-lock.json  package.json  plan.md  tsconfig.json
codexlet/src/: main.ts  (+1 more)
cowork/: README.md  __init__.py  admin.py  artifacts.py  artifacts_store.py  cli.py  collab.py  engine.py  events.py  guardrails.py  memory.py  models.py  orchestrator.py  parser.py  projects.py  scheduler.py  security.py  store.py  web.py
examples/: README.md  _runner.py  quickstart_real_agent.py
gdpval_results/: progress.json
mini_coding_agent/: __init__.py  __main__.py  agent.py  cli.py  compaction.py  config.py  env_config.py  memory_files.py  parsing.py  prompt.py  sandbox.py  tools.py  utils.py  welcome.py
scripts/: build_binary.py
tests/: conftest.py  test_alignment.py  test_baseline.py  test_codexlet_alignment.py  test_compaction.py  test_config.py  test_env_config.py  test_integration.py  test_integration_libreoffice.py  test_integration_skills.py  test_memory_files.py  test_mini_coding_agent.py  test_modular_package.py  test_phase1_foundation.py  test_phase2_tools.py  test_phase3_delegate.py  test_phase4_protocols.py  test_phase5_skills.py  test_phase6_hardening.py  test_plan_coverage.py  test_prompt_layers.py
(+34 files in other folders)
