[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codelet"
version = "0.2.0"
description = "Minimal standalone coding agent backed by Ollama or any OpenAI-compatible API"
requires-python = ">=3.10"
dependencies = [
    "pytest>=9.0.2",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
yaml = ["pyyaml>=6.0"]
protocols = [
    "mcp>=1.27.1",
    "a2a-sdk>=1.0.3",
    "acp-sdk>=1.0.3",
]

[project.scripts]
codelet = "codelet.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.4.4",
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["codelet*"]

[tool.setuptools.package-data]
codelet = ["config/*.yaml"]
